feat[integration]: add gui and worker

--- a/.reek.yml
+++ b/.reek.yml
@@ -15,3 +15,6 @@ directories:
     UncommunicativeVariableName:
       accept:
         - t
+  "app/sidekiq":
+    UtilityFunction:
+      enabled: false
