--- a/config/database.yml
+++ b/config/database.yml
@@ -13,7 +13,7 @@ default: &default
   adapter: mysql2
   encoding: utf8mb4
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-  username: root
+  username: <%= Settings.db.username %>
   password: <%= Settings.db.password %>
   socket: /tmp/mysql.sock
 
